--- a/app/style/main.css
+++ b/app/style/main.css
@@ -1,11 +1,11 @@
 html {
     position: relative;
-    height: 100%;
+    min-height:100%;
 }
 
 body {
     height: 100%;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 }
 /* As personalizações de estilo deverão estar nesse arquivo */
 .btn-botao {
