--- a/app/style/main.css
+++ b/app/style/main.css
@@ -1,40 +1,58 @@
 html {
     position: relative;
-    min-height:100%;
+    min-height: 100%;
 }
 
 body {
     height: 100%;
     /* margin-bottom: 30px; */
 }
+
 /* As personalizações de estilo deverão estar nesse arquivo */
 .btn-botao {
-    color:#fff;
-    background-color:#055160;
-    border-color:#055160}
-    
-.btn-botao:hover{color:#fff;
-    background-color:#055160;
-    border-color:#055160}
-        
-.btn-check:focus+.btn-botao,.btn-botao:focus{
-    color:#fff;
-    background-color:#055160;
-    border-color:#055160;
-    box-shadow:0 0 0 .25rem 055160}
-            
-.btn-check:active+.btn-botao,.btn-check:checked+.btn-botao,.btn-botao.active,.btn-botao:active,.show>.btn-botao.dropdown-toggle{
-    color:#fff;
-    background-color:#055160;
-    border-color:#055160}
-                
-.btn-check:active+.btn-botao:focus,.btn-check:checked+.btn-botao:focus,.btn-botao.active:focus,.btn-botao:active:focus,.show>.btn-botao.dropdown-toggle:focus{
-    box-shadow:0 0 0 .25rem 055160}
+    color: #fff;
+    background-color: #055160;
+    border-color: #055160
+}
 
-.btn-botao.disabled,.btn-botao:disabled{
-    color:#fff;
-    background-color:#055160;
-    border-color:#055160}
+.btn-botao:hover {
+    color: #fff;
+    background-color: #055160;
+    border-color: #055160
+}
+
+.btn-check:focus+.btn-botao,
+.btn-botao:focus {
+    color: #fff;
+    background-color: #055160;
+    border-color: #055160;
+    box-shadow: 0 0 0 .25rem 055160
+}
+
+.btn-check:active+.btn-botao,
+.btn-check:checked+.btn-botao,
+.btn-botao.active,
+.btn-botao:active,
+.show>.btn-botao.dropdown-toggle {
+    color: #fff;
+    background-color: #055160;
+    border-color: #055160
+}
+
+.btn-check:active+.btn-botao:focus,
+.btn-check:checked+.btn-botao:focus,
+.btn-botao.active:focus,
+.btn-botao:active:focus,
+.show>.btn-botao.dropdown-toggle:focus {
+    box-shadow: 0 0 0 .25rem 055160
+}
+
+.btn-botao.disabled,
+.btn-botao:disabled {
+    color: #fff;
+    background-color: #055160;
+    border-color: #055160
+}
 
 /* .card {
     border-width: 0px !important;
