--- a/app/style/sidebar.css
+++ b/app/style/sidebar.css
@@ -211,3 +211,10 @@ a {
   --bs-primary-rgb: 5, 81, 96 !important;
   --bs-primary: var(--cor-principal) !important;
 }
+
+.active>.page-link, .page-link.active {
+  z-index: 3;
+  color: #ffff;
+  background-color: #055160 !important;
+  border-color: #055160 !important;
+}
